--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/home">Home</a>
+                    <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" aria-current="page" routerLink="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/about">About</a>
