--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,8 +10,8 @@
         <a class="navbar-brand" href="#">
             <img src="./favicon.ico" alt="icone"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
@@ -21,7 +21,10 @@
                     <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/contact">Contact</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/login">Login</a>
                 </li>
             </ul>
             <form class="d-flex">
